@@ -59,7 +59,7 @@ void list_breakpoints ();
 name_val_val *map_int_to_name_val_val (name_val_val tbl[], int tbl_len, int num);
 name_val_val *map_string_to_name_val_val (name_val_val tbl[], int tbl_len, char *id);
 int read_assembly_file (char *name);
-int run_program (mem_addr pc, int steps, int display, int cont_bkpt);
+int run_program (mem_addr pc, int steps, int display, int cont_bkpt, int* continuable);
 mem_addr starting_address ();
 char *str_copy (char *str);
 void write_startup_message ();
