@@ -1,8 +1,8 @@
 /********************************************************************************
 ** Form generated from reading UI file 'printwindows.ui'
 **
-** Created: Sun Sep 12 07:16:47 2010
-**      by: Qt User Interface Compiler version 4.6.3
+** Created: Sat Oct 2 16:51:35 2010
+**      by: Qt User Interface Compiler version 4.7.0
 **
 ** WARNING! All changes made in this file will be lost when recompiling UI file!
 ********************************************************************************/
